# j-browser

./: .gitignore  Cargo.toml  README.md  RUN.md  run.sh
assets/: app.html  home.html  nav.html
src/: main.rs
src/ai/: assistant.rs  mod.rs  processor.rs
src/browser/: engine.rs  mod.rs  navigation.rs
src/ui/: mod.rs
